Middle-clicking title bars does not lower the window under Wayland
Steps to reproduce
- gsettings set org.gnome.desktop.wm.preferences.action-middle-click-titlebar lower
- middle-click the title bar (or header bar) of any Gtk application that uses CSD under Wayland
Current behavior
Nothing happens
Expected outcome
The window is lowered
Version information
GTK 3.22, Ubuntu 19.04
Additional information
The source explains why this happens:
static void
gdk_surface_wayland_lower (GdkSurface *surface)
{
}
Fixing this would probably require a private Wayland request such as gtk_surface1.request_focus that was added to fix #642, so I filed mutter#602 (closed) for that.
Edited by Marius Gedminas