Implement lowering on wayland with gtk-shell version 4

Should fix https://gitlab.gnome.org/GNOME/gtk/-/issues/1895